syntax = "proto3";

package secrets.v1;

message QuerySecretRequest {
  string key = 1;
  bool covered = 2;
}
message QuerySecretResponse {
  optional string value = 1;
  optional string error = 2;
}

service SecretsService {
  rpc QuerySecret(QuerySecretRequest) returns (QuerySecretResponse);
}
